--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -5,8 +5,8 @@
     <title>Mugesh's Personal Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Black+Ops+One&family=Moirai+One&family=Rubik+Iso&display=swap" rel="stylesheet">
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Black+Ops+One&family=Moirai+One&family=Rubik+Iso&family=VT323&display=swap" rel="stylesheet">
+</head>
   <body>
    
     <div id="root">
